// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/radar/RadarAnimation should render correctly with bottom-center positioning 1`] = `
<d
  attachment="top center"
  classPrefix="radar-animation"
  constraints={
    [
      {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  enabled={true}
  renderElement={[Function]}
  renderTarget={[Function]}
  targetAttachment="bottom center"
/>
`;

exports[`components/radar/RadarAnimation should render correctly with bottom-left positioning 1`] = `
<d
  attachment="top left"
  classPrefix="radar-animation"
  constraints={
    [
      {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  enabled={true}
  renderElement={[Function]}
  renderTarget={[Function]}
  targetAttachment="bottom left"
/>
`;

exports[`components/radar/RadarAnimation should render correctly with bottom-right positioning 1`] = `
<d
  attachment="top right"
  classPrefix="radar-animation"
  constraints={
    [
      {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  enabled={true}
  renderElement={[Function]}
  renderTarget={[Function]}
  targetAttachment="bottom right"
/>
`;

exports[`components/radar/RadarAnimation should render correctly with middle-center positioning 1`] = `
<d
  attachment="middle center"
  classPrefix="radar-animation"
  constraints={
    [
      {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  enabled={true}
  renderElement={[Function]}
  renderTarget={[Function]}
  targetAttachment="middle center"
/>
`;

exports[`components/radar/RadarAnimation should render correctly with middle-left positioning 1`] = `
<d
  attachment="middle right"
  classPrefix="radar-animation"
  constraints={
    [
      {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  enabled={true}
  renderElement={[Function]}
  renderTarget={[Function]}
  targetAttachment="middle left"
/>
`;

exports[`components/radar/RadarAnimation should render correctly with middle-right positioning 1`] = `
<d
  attachment="middle left"
  classPrefix="radar-animation"
  constraints={
    [
      {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  enabled={true}
  renderElement={[Function]}
  renderTarget={[Function]}
  targetAttachment="middle right"
/>
`;

exports[`components/radar/RadarAnimation should render correctly with tetherElementClassName 1`] = `
<d
  attachment="middle left"
  className="tether-element-class-name"
  classPrefix="radar-animation"
  constraints={
    [
      {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  enabled={true}
  renderElement={[Function]}
  renderTarget={[Function]}
  targetAttachment="middle right"
/>
`;

exports[`components/radar/RadarAnimation should render correctly with top-center positioning 1`] = `
<d
  attachment="bottom center"
  classPrefix="radar-animation"
  constraints={
    [
      {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  enabled={true}
  renderElement={[Function]}
  renderTarget={[Function]}
  targetAttachment="top center"
/>
`;

exports[`components/radar/RadarAnimation should render correctly with top-left positioning 1`] = `
<d
  attachment="bottom left"
  classPrefix="radar-animation"
  constraints={
    [
      {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  enabled={true}
  renderElement={[Function]}
  renderTarget={[Function]}
  targetAttachment="top left"
/>
`;

exports[`components/radar/RadarAnimation should render correctly with top-right positioning 1`] = `
<d
  attachment="bottom right"
  classPrefix="radar-animation"
  constraints={
    [
      {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  enabled={true}
  renderElement={[Function]}
  renderTarget={[Function]}
  targetAttachment="top right"
/>
`;
